* feat(contactCard.tsx): update text size for name and tag in ContactCard component * feat(footer.tsx): add site logo, copyright text, and back to top button in Footer component * fix(navbar.tsx): comment out unnecessary label and update flex alignment in Navbar component

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -634,6 +634,10 @@ video {
   margin-bottom: 0.25rem;
 }
 
+.mb-16 {
+  margin-bottom: 4rem;
+}
+
 .mb-2 {
   margin-bottom: 0.5rem;
 }
@@ -688,10 +692,6 @@ video {
 
 .mt-4 {
   margin-top: 1rem;
-}
-
-.mb-16 {
-  margin-bottom: 4rem;
 }
 
 .block {
@@ -920,6 +920,11 @@ video {
   padding-bottom: 1rem;
 }
 
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
 .pl-3 {
   padding-left: 0.75rem;
 }
@@ -950,6 +955,11 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .font-bold {
